--- a/css/goodsintro.css
+++ b/css/goodsintro.css
@@ -5,12 +5,42 @@
 }
 .intro_left{
     float: left;
+    position: relative;
 }
 .intro_left .img{
     width: 360px;
     height: 360px;
     padding: 20px;
     border: 1px solid #ccc;
+    position: relative;
+}
+.intro_left .img span{
+    width:100px;
+    height:100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgba(200,200,200,.6);
+    display: block;
+    z-index: 2;
+}
+.intro_left .bigimg{
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    left: 420px;
+    top: 0;
+    border: 1px solid #ccc;
+    /* display: none; */
+    position: relative;
+}
+.intro_left .bigimg{
+    position: absolute;
+    overflow: hidden;
+}
+.intro_left .bigimg img{
+    width: 450px;
+    height: 450px;
 }
 .intro_left .img img{
     width: 360px;
@@ -18,13 +48,15 @@
 .intro_left .img_s{
     width: 362px;
     height: 60px;
-    padding: 10px 20px;
+    padding: 15px 20px;
 }
 .intro_left .img_s img{
     display: block;
     width: 50px;
     float: left;
-    padding: 5px 10px ;
+    padding: 5px 0;
+    margin-right: 18px;
+    border: 2px solid #999;
 }
 
 .intro_right{
@@ -74,6 +106,10 @@
     margin-left: 9px;
     padding-right: 10px;
 }
+.intro_right ul li img{
+    width: 30px;
+    height: 30px;
+}
 .intro_right ul li:nth-child(1){
     border: none;
 }
@@ -89,7 +125,7 @@
     border-top:1px dashed #ccc;
     border-bottom:1px dashed #ccc;
     padding: 20px 110px;
-    margin-top: 17px;
+    margin-top: 32px;
 }
 .intro_right .gobuy .gocar{
     width: 140px;
